--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Joe",
   "private": true,
   "dependencies": {
-    "nuxt": "latest"
+    "nuxt": "0.10.6"
   },
   "scripts": {
     "dev": "nuxt",
